alignment fix

--- a/src/LandingPage/LandingPage.scss
+++ b/src/LandingPage/LandingPage.scss
@@ -100,6 +100,7 @@ $items: 1,2,3;
 }
 .splitted-image {
     opacity: .1;
+    width: 1200%;
     flex: 1 0 1200%;
     position: relative;
 }
